<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="xx">Fall Detector is running</string>
    <string name="add_task">New Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="task_details">Task Details</string>
    <string name="task_marked_complete">Task marked complete</string>
    <string name="task_marked_active">Task marked active</string>
    <string name="loading_tasks_error">Error while loading tasks</string>
    <string name="completed_tasks_cleared">Completed tasks cleared</string>
    <string name="menu_filter">Filter</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="menu_back">Back</string>
    <string name="menu_clear">Clear completed</string>
    <string name="menu_delete_task">Delete task</string>
    <string name="menu_more">More</string>
    <string name="navigation_view_header_title">Todo</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Enter your task here.</string>
    <string name="cd_save_task">Save task</string>
    <string name="empty_task_message">Tasks cannot be empty</string>
    <string name="successfully_saved_task_message">Task saved</string>
    <string name="list_title">Task List</string>
    <string name="statistics_title">Statistics</string>
    <string name="statistics_no_tasks">You have no tasks.</string>
    <string name="statistics_active_tasks">Active tasks: %.1f%%</string>
    <string name="statistics_completed_tasks">Completed tasks: %.1f%%</string>
    <string name="statistics_error">Error loading statistics.</string>
    <string name="no_data">No data</string>
    <string name="loading">LOADING</string>

    <string-array name="list_tasks_array">
        <item>@string/nav_all</item>
        <item>@string/nav_active</item>
        <item>@string/nav_completed</item>
    </string-array>
    <string name="nav_all">All</string>
    <string name="nav_active">Active</string>
    <string name="nav_completed">Completed</string>
    <string name="label_all">All Tasks</string>
    <string name="label_active">Active Tasks</string>
    <string name="label_completed">Completed Tasks</string>
    <string name="no_tasks_all">You have no tasks!</string>
    <string name="no_tasks_active">You have no active tasks!</string>
    <string name="no_tasks_completed">You have no completed tasks!</string>
    <string name="refresh">Refresh</string>
    <string name="successfully_deleted_task_message">Task was deleted</string>
    <string name="successfully_added_task_message">Task added</string>
    <string name="no_data_description" />

    <!-- Content Descriptions -->
    <string name="tasks_header_image_content_description">Tasks header image</string>
    <string name="no_tasks_image_content_description">No tasks image</string>

    <!--    Application Name starts here-->
    <string name="app_name">Fall Detector</string>
    <!--    Application Name ends here-->

    <!--    Notification starts here-->
    <string name="notification_title">Fall Detector is running</string>
    <!--    Notification ends here-->

    <!--    Bottom navigation starts here-->
    <string name="bottom_navigation_home_text">Home</string>
    <string name="bottom_navigation_graph_text">Graph</string>
    <string name="bottom_navigation_settings_text">Settings</string>
    <string name="bottom_navigation_contacts_text">Contacts</string>
    <!--    Bottom navigation ends here-->

    <!--    Graph Fragment starts here-->
    <string name="graph_fragment_button_start_text">Start</string>
    <string name="graph_fragment_button_stop_text">Stop</string>
    <string name="graph_fragment_chip_acc_text">ACC.</string>
    <string name="graph_fragment_chip_delta_text">\u0394</string>
    <string name="graph_fragment_x_axis_acc_text">X-axis acceleration</string>
    <string name="graph_fragment_y_axis_acc_text">Y-axis acceleration</string>
    <string name="graph_fragment_z_axis_acc_text">Z-axis acceleration</string>
    <string name="graph_fragment_acceleration_text">Acceleration values:</string>
    <!--    Graph Fragment ends here-->

    <!--    Counter Fragment starts here-->
    <string name="counter_fragment_fall_detected_text">FALL DETECTED!</string>
    <string name="counter_fragment_have_text">You have</string>
    <string name="counter_fragment_abort_text">to abort</string>
    <string name="counter_fragment_ok_text">I\'m OK</string>
    <!--    Counter Fragment starts here-->

    <!--    Sensor starts here-->
    <string name="accelerometer_not_supported_toast_text">ACCELEROMETER IS NOT SUPPORTED!</string>
    <!--    Sensor ends here-->

    <!--    Preferences starts here-->
    <string name="preferences_category_timer_title_text">Timer</string>
    <string name="preferences_category_detection_algorithm_title_text">Detection Algorithm</string>
    <string name="preferences_list_timer_title_text">Timer Length</string>
    <string name="preferences_list_algorithm_title_text">Select Algorithm</string>
    <string name="preferences_timer_array_one_minute_text">1 minute</string>
    <string name="preferences_timer_array_two_minute_text">2 minute</string>
    <string name="preferences_timer_array_five_minute_text">5 minute</string>
    <string name="preferences_timer_array_ten_minute_text">10 minute</string>
    <string name="preferences_algorithms_array_impact_posture_text">IMPACT + POSTURE</string>
    <string name="preferences_algorithms_array_impact_posture_fall_text">START OF FALL + IMPACT + POSTURE</string>
    <string name="preferences_algorithms_array_impact_velocity_posture_fall_text">START OF FALL + VELOCITY + IMPACT + POSTURE</string>
    <string name="preferences_category_sending_notification_title_text">Sending notifications</string>
    <string name="preferences_send_messages_title_text">Send messages</string>
    <!--    Preferences ends here-->

    <!--    Drawer starts here-->
    <string name="navigation_drawer_open_text">Navigation drawer is open</string>
    <string name="navigation_drawer_closed_text">Navigation drawer is closed</string>
    <!--    Drawer ends here-->

    <!--    Message Sender starts here-->
    <string name="message_sender_text_body">I had an accident and I need help! My location: %1$s, GPS: %2$s, %3$s</string>
    <string name="message_sender_all_message_sent_text">All SMS have been sent</string>
    <string name="message_sender_message_sent_text">SMS sent</string>
    <string name="message_sender_error_when_sending_text">Failure while sending message</string>
    <string name="message_sender_message_delivered_text">SMS delivered</string>
    <string name="message_sender_message_not_delivered_text">SMS not delivered</string>
    <!--    Message Sender ends here-->

    <!--    Permission Dialog starts here-->
    <string name="permission_dialog_title_text">WARNING!</string>
    <string name="permission_dialog_dismiss_text">DISMISS</string>
    <string name="permission_dialog_message_text">You have not granted application permissions. The app will ask for them once more. Lack of consent will prevent the normal functioning of the application.</string>
    <!--    Permission Dialog ends here-->

    <!--    Add Contact Dialog starts here-->
    <string name="contact_dialog_title_text">Add contact</string>
    <string name="contact_dialog_cancel_text">Cancel</string>
    <string name="contact_dialog_add_text">Add</string>
    <string name="contact_dialog_name_text">Name:</string>
    <string name="contact_dialog_surname_text">Last name:</string>
    <string name="contact_dialog_phone_text">Phone:</string>
    <string name="contact_dialog_plus_text">+</string>
    <!--    Add Contact Dialog ends here-->

    <!--    Remove Contact Dialog starts here-->
    <string name="remove_contact_dialog_title_text">Contact removal</string>
    <string name="remove_contact_dialog_message_text">Do you want to delete the contact to \"%1$s %2$s\"</string>
    <string name="remove_contact_dialog_cancel_text">Cancel</string>
    <string name="remove_contact_dialog_remove_text">Remove</string>
    <!--    Remove Contact Dialog ends here-->

    <!--    Time Out Dialog starts here-->
    <string name="time_out_dialog_exit_text">Exit</string>
    <!--    Time Out Dialog ends here-->

    <!--    Contacts Fragment starts here-->
    <string name="contacts_fragment_recycler_title_text">Name / Telephone</string>
    <string name="contacts_fragment_contacts_text">List of contacts</string>
    <!--    Contacts Fragment ends here-->

    <!--    LocationTracker starts here-->
    <string name="location_tracker_toast_text">No Service Provider is available</string>
    <string name="location_tracker_dialog_title_text">GPS is not Enabled!</string>
    <string name="location_tracker_dialog_message_text">Do you want to turn on GPS?</string>
    <string name="location_tracker_dialog_yes_text">Yes</string>
    <string name="location_tracker_dialog_no_text">No</string>
    <!--    LocationTracker ends here-->

    <!--    Time Out Dialog starts here-->
    <string name="time_our_dialog_counter_time_out_text">Counter time out</string>
    <string name="time_our_dialog_message_sent_text">Message has been sent to all contact persons!</string>
    <!--    Time Out Dialog ends here-->

    <!--    SharedPreferences starts here-->
    <string name="shared_preferences_timer_length_list_key" translatable="false">pl.birski.falldetector.timer_length_list_key</string>
    <string name="shared_preferences_detection_algorithms_list_key" translatable="false">pl.birski.falldetector.detection_algorithms_list_key</string>
    <string name="shared_preferences_send_message_key" translatable="false">pl.birski.falldetector.send_message_key</string>
    <!--    SharedPreferences ends here-->

    <!--    Templates start here-->
    <string name="template_phone_number" translatable="false">%1$s %2$s</string>
    <string name="template_person_name" translatable="false">%1$s %2$s</string>
    <!--    Templates end here-->

</resources>
